projects/spats/test/Adapter_Trimming/Negative/NOMASK_1.fq
@1
AAATGAACCGGACCGAAGCCCGATTTAATTGGATC
+FL-p
5====<>>@@@<@@@@>>CEECC#5##########
@2
AAATGAACCGGACCGAAGCCCGATTTAATTGGATC
+36-p
5====<>>@@@<@@@@>>CEECC#5##########
@3
AAATGAACCGGACCGAAGCCCGATTTAATTGGATC
+35-p
5====<>>@@@<@@@@>>CEECC#5##########
@4
AAATGAACCGGACCGAAGCCCGATTTAATTGGATA
+34-p
5====<>>@@@<@@@@>>CEECC#5##########
@5
AAATGAACCGGACCGAAGCCCGATTTAATTAGATC
+30-p
5====<>>@@@<@@@@>>CEECC#5##########
@6
AAATGAACCGGACCGAAGCCCGATTTAGATCGGAA
+26-p
5====<>>@@@<@@@@>>CEECC#5##########
@7
AAATGAACCGGACCGAAGCCCGAGATCGGAAGAGC
+22-p
5====<>>@@@<@@@@>>CEECC#5##########
@8
TTTAGAACCGGACCGAAGCCCGATTTAATTGGATC
+FL-m
5====<>>@@@<@@@@>>CEECC#5##########
@9
TTTAGAACCGGACCGAAGCCCGATTTAATTGGATC
+36-m
5====<>>@@@<@@@@>>CEECC#5##########
@10
TTTAGAACCGGACCGAAGCCCGATTTAATTGGATC
+35-m
5====<>>@@@<@@@@>>CEECC#5##########
@11
TTTAGAACCGGACCGAAGCCCGATTTAATTGGATA
+34-m
5====<>>@@@<@@@@>>CEECC#5##########
@12
TTTAGAACCGGACCGAAGCCCGATTTAATTAGATC
+30-m
5====<>>@@@<@@@@>>CEECC#5##########
@13
TTTAGAACCGGACCGAAGCCCGATTTAGATCGGAA
+26-m
5====<>>@@@<@@@@>>CEECC#5##########
@14
TTTAGAACCGGACCGAAGCCCGAGATCGGAAGAGC
+22-m
5====<>>@@@<@@@@>>CEECC#5##########
